Adapt Linux i915 wait_for to use DELAY so it works while cold.

Adapted from a patch by nonaka@ in PR 48706.