sys/external/bsd/drm2/dist/drm/i915/intel_drv.h
@@ -34,6 +34,59 @@
 #include <drm/drm_fb_helper.h>
 #include <drm/drm_dp_helper.h>
 
+#ifdef __NetBSD__
+#define _wait_for(COND, MS, W) ({ \
+	int ret__ = 0;							\
+	if (cold) {							\
+		int ms = (MS);						\
+		while (!(COND)) {					\
+			if (--ms < 0) {					\
+				ret__ = -ETIMEDOUT;			\
+				break;					\
+			}						\
+			DELAY(1000);					\
+		}							\
+	} else {							\
+		unsigned long timeout__ = jiffies + msecs_to_jiffies(MS); \
+		while (!(COND)) {					\
+			if (time_after(jiffies, timeout__)) {		\
+				ret__ = -ETIMEDOUT;			\
+				break;					\
+			}						\
+			if ((W) && drm_can_sleep())  {			\
+				msleep(W);				\
+			} else {					\
+				cpu_relax();				\
+			}						\
+		}							\
+	}								\
+	ret__;								\
+})
+
+#define wait_for_atomic_us(COND, US) ({ \
+	int ret__ = 0;							\
+	if (cold) {							\
+		int us = (US);						\
+		while (!(COND)) {					\
+			if (--us < 0) {					\
+				ret__ = -ETIMEDOUT;			\
+				break;					\
+			}						\
+			DELAY(1);					\
+		}							\
+	} else {							\
+		unsigned long timeout__ = jiffies + usecs_to_jiffies(US); \
+		while (!(COND)) {					\
+			if (time_after(jiffies, timeout__)) {		\
+				ret__ = -ETIMEDOUT;			\
+				break;					\
+			}						\
+			cpu_relax();					\
+		}							\
+	}								\
+	ret__;								\
+})
+#else	/* !NetBSD */
 #define _wait_for(COND, MS, W) ({ \
 	unsigned long timeout__ = jiffies + msecs_to_jiffies(MS);	\
 	int ret__ = 0;							\
@@ -63,6 +116,7 @@
 	}								\
 	ret__;								\
 })
+#endif	/* NetBSD */
 
 #define wait_for(COND, MS) _wait_for(COND, MS, 1)
 #define wait_for_atomic(COND, MS) _wait_for(COND, MS, 0)
